css/style.css
html {
    scroll-behavior: smooth;
}

body {
    padding: 0%;
    margin: 0%;
    background-color: whitesmoke;
    font-family: 'Open Sans', sans-serif;
}

a {
    text-decoration: none;
}

h1,
h2,
h3,
h4 {
    text-align: center;
    margin: 2% 0% 3% 0%;
    z-index: 90;
    font-family: 'Montserrat', sans-serif;
    padding-top: 2%;
}

h4 {
    text-align: center;
}

button {
    padding: 0%;
}

/*ANIMATIONS*/
@keyframes slide-down {
    0% {
        opacity: 0;
        transform: translate(0px, -50px);
    }

    100% {
        opacity: 1;
        transform: translate(0px, 0px);
    }
}

@keyframes slide-up {
    0% {
        opacity: 0;
        transform: translate(0px, 50px);
    }

    100% {
        opacity: 1;
        transform: translate(0px, 0px);
    }
}

@keyframes spinner {
    0% {
        transform: rotateZ(0deg);
    }

    100% {
        transform: rotateZ(360deg);
    }
}

@keyframes reverse-spinner {
    0% {
        transform: rotateZ(0deg);
    }

    100% {
        transform: rotateZ(-360deg);
    }
}

@keyframes fade-in {
    0% {
        display: none;
        opacity: 0;
    }

    1% {
        display: block;
        opacity: 0;
    }

    100% {
        display: block;
        opacity: 1;
    }
}

@keyframes transform {
    0% {
        transform: scale(0.85);
    }

    100% {
        transform: scale(1);
    }
}

.transformer {
    animation-name: transform;
    animation-duration: 350ms;
}

.unspin {
    animation-name: reverse-spinner;
    animation-duration: 500ms;
}

.spin {
    animation-name: spinner;
    animation-duration: 500ms;
}

.fade {
    animation-name: fade-in;
    animation-duration: 500ms;
}

.animate-up {
    animation-name: slide-up;
    animation-duration: 350ms;
}

.animate-down {
    animation-name: slide-down;
    animation-duration: 200ms;
}

.header-container {
    background-color: #2496EF;
    width: 100%;
    height: 70px;
    position: fixed;
    z-index: 100;
    display: flex;
    box-shadow: 9px 5px 10px -5px #808386;
}

.header-logo {
    width: 0;
}

.header {

    background-color: inherit;
    height: 70px;
    width: 100%;
    /*box-shadow: 9px 5px 10px -5px #aaafb3;*/
}

.headerbtn {
    width: 24%;
    height: 100%;
    background-color: inherit;
    border: none;
    color: white;
    font-size: 16px;
    font-weight: bold;
}

.headerbtn:hover {
    /* animation: ease-in fade-in 250ms; */
    border-bottom: 3px solid #e9f1f2;            
}

.headerlink {
    color: white;
}

.placeholder-container {
    text-align: center;
}

.logo-container {

    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../media/images/bground.jpg');
    background-size: cover;

    width: 100%;
}

.logo-inner {
    overflow: hidden;
    margin-top: 70px;
    padding: 5% 1% 5% 1%;
    display: inline-block;
    text-align: center;
    min-height: 180px;
}

#about {
    background-color: white;
    padding: 1% 0% 5% 0%;
}

.stickynavbar {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 2;
}

#mylogo {
    display: none;
    width: 55%;
    height: 50%;
    border: none;
    border-radius: 100%;
}

#avatar {
    width: 55%;
    height: 50%;
    border: none;
    border-radius: 100%;
}

#ray {
    color: #2496EF;
}

.ray {
    color: #2496EF;
}

.intro {
    /* color: #3f4142;*/
    color: white;
    padding: 1%;
}

.placeholder {
    background-color: #e9f1f2;
    padding-top: 2%;
    display: inline-block;
    width: 100%;
}

.listing {
    text-align: left;

}

@media only screen and (min-width: 768px) {
    .listing li {
        float: left;
        list-style-position: inside;
        list-style-type: square;
        margin-left: 5%;
    }
}


.skills {
    color: #009cb8;
}

.projects {
    color: #009cb8;
    padding: 0% 0% 2% 0%;
    text-align: center;
}

.card {
    margin: 2% 2% 5% 2%;
    padding: 5% 0% 5% 0%;
    display: inline-block;
    width: 95%;
}

.inner-card {
    margin: 5% 0% 2% 0%;
    border: 1px solid #d3d6d8;
    border-radius: 5px;
    padding: 4% 0% 4% 0%;
}

#ark,
#orion,
#jbs,
#res {
    width: 90%;
    height: 90%;
}

#resume {
    padding: 4% 0% 4% 0%;
    z-index: 10;
    background-color: white;
}

.project-desc {
    color: #3f4142;
    margin: 2% 2% 5% 2%;
}

.view {
    height: 35px;
    width: 80px;
    background-color: transparent;
    font-size: 16px;
    margin: 8px 0px 5px 0px;
    border-width: 1px;
    border-style: solid;
    border-radius: 3px;
    padding: 0;
}

.ark {
    color: #00706e;
    border-color: #00706e;
}

.orion {
    color: #009cb8;
    border-color: #009cb8;
}

.downloadbtn {
    height: 35px;
    width: 120px;
    color: #2496EF;
    border-color: #2496EF;
    background-color: white;
    font-size: 16px;
    margin: 8px 0px 5px 0px;
    border-width: 1px;
    border-style: solid;
    border-radius: 3px;
    padding: 0;
}

.footer {
    color: white;
    display: inline-block;
    background-color: #323336;
    width: 100%;
    height: 200px;
    text-align: center;
}

.show-footer {
    visibility: visible;
}

.contact-details {
    width: 100%;
    padding: 0%;
}

table tr td a {
    color: #2496EF;
}

.footer ul li {
    margin: 10px;
    color: white;
}

.footer ul li a {
    color: #2496EF;
}

table {
    width: 100%;
    text-align: center;
}

tr {
    height: 20px;
    padding: 1%;
    margin: 3%;
}

#projects img {
    filter: brightness(90%);
}

#projects img:hover {
    filter: brightness(100%);
    animation: fade-in 0.2s ease-in;
   /* animation-duration: 500ms;*/
}
/*FOR LARGE SCREEN DEVICES*/

@media only screen and (min-width: 768px) {
    .logo-container {       
        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../media/images/bgroundflipped2.jpg');
        background-size: cover;
    }

    .header-logo {
        width: 60%;

    }

    .h-l {
        content: url("../media/images/logo.png");
        border-radius: 100%;        
        height: 80%;
        padding: 1%;
    }

    .header {
        width: 40%;
    }

    .description {
        width: 40%;
        margin-top: 10%;
    }

    .logo-inner {
        visibility: inherit;
        display: flex;
        margin: 0% 2% 0% 2%;
    }

    .logo {
        width: 35%;
        height: 35%;
        padding: 5% 0% 5% 0%;
    }

    .intro {
        color: white;
        font-size: x-large;
    }

    .card {
        margin: 1% 2% 2% 2%;
        padding: 2% 0% 3% 0%;
    }

    .inner-card {
        padding: 1%;
        margin: 1%;
        width: 32%;
        height: 90%;
        border: 1px solid #d3d6d8;
        border-radius: 5px;
    }

    .projects {
        display: flex;
    }

}

